# stm32h750_embedded_test

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
tests/: test.rs
