[package]
name = "stm32h750_embedded_test"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7.0", features = ["device"] }
panic-probe = { version = "0.3.2" }
embassy-stm32 = { version = "0.1.0", features = ["stm32h750ib", "time-driver-tim2", "exti", "memory-x", "unstable-pac", "chrono"] }
embedded-test = { version = "0.4.0", features = ["panic-handler"] }

[[test]]
name = "test"
harness = false